--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body {background: blue;}
 
 .text {text-align: center;
-        padding: 50px; 
+	   border: 20 px
+        padding: 50 px; 
         }
 
-.samurai2 {img-margin-top: 100px;
-	       img-margin-bottom: 100px;
-	       img-margin-left: 100px;
-	       img-margin-right: 100px;
-	       img-border: 30;
+.samurai2 {margin-top: 100 px;
+	       margin-bottom: 100 px;
+	       margin-left: 100 px;
+	       margin-right: 100 px;
+	       
 	       }
