--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
-body {background: blue;}
+body {background: blue;
+      background-image: bushidobackground.jpeg}
 
 .text {text-align: center;
+	   font: helvetica;
+	   
 	   border-color: red;
-        padding: 50; 
+       padding: 50px 50px 50px 50px; 
         }
 
-.samurai2 {margin: 50;
+.samurai2 {margin: 50%;
+
 	       
 	       }
