--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {background: blue;
        padding: 50px 50px 50px 50px; 
         }
 
-.samurai2 {margin: 50%;
-
-	       
-	       }
+.samurai2 {margin: 10%;
+            padding-top: 50px;
+                 }   
