--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {background: blue;
-      background-image: bushidobackground.jpeg;
+      background-image: bushidobackground.jpg;
   }
 
 .text {text-align: center;
