--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {background: blue;
         }
 
 .samurai2 {margin: 10%;
+          border: 50px;
            border-color: red; 
            padding-top: 50px;
                  }  
