--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,6 @@ body {
            padding-top: 50px;
                  }  
 
-#table {background: blue;}
+#table {font-color: blue;}
 
 a:visited {color: red;} 
