--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,10 @@ body {
                  }  
 
 #table {background: blue;
-        padding: 50px 50px 50px 50px;   
+        padding-left: 50px; 
+        padding-right: 50px;
+        padding-top: 50px;
+        padding-bottom: 50px;   
             }
 
 a:visited {color: red;} 
