style sheet test

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,9 @@ body {
             }
 
 a:visited {color: red;} 
+
+@media screen and (max-width: 500px) {
+  body {
+    background-color: red;
+  }
+}
