--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
                  }  
 
 #table {background: blue;
+        width: 500px;
         padding-left: 50px; 
         padding-right: 50px;
         padding-top: 50px;
@@ -28,3 +29,8 @@ a:visited {color: red;}
     background-color: red;
   }
 }
+
+@media screen and (max-width: 720px){
+  body {
+    font-size: 75%;   
+  }
