--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ body {
   }
 
 .text {text-align: center;
+      background-color: white;
 	   font-style: oblique;
 	   border-style: solid;
-	   border-color: red;
+	   border-color: blue;
      padding: 50px 50px 50px 50px; 
         }
 
