--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ body {
         padding-top: 50px;
         padding-bottom: 50px;   
             }
+.virtues {background: blue;
+          text-align: center;
+          }
 
 a:visited {color: red;} 
 
