--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ div.fixed {
 
 #container {
   border: 2px solid black; 
-  border-top: 10px solid grey;
+  border-top: 10px solid gray;
   background: #ddd;
   width: 140px;
   margin: 10px;
