--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ div.fixed {
   width: 140px;
   margin: 10px;
   padding: 20px;
-  font: Helvetica;
+  font-family: Helvetica;
   font-size: 14px;
   background: #eee;
   float: right;
