--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,12 @@ body {
 	margin-left: 150px;
 }
 
-div.fixed {
+.fixed {
     position: fixed;
     top: 0;
     right: 0;
+    margin-right: 10px;
+    margin-top: 10px;
     width: 10px;
     border: 10px solid black;
 }
@@ -32,7 +34,6 @@ div.fixed {
 
 .header {
 	font-family: georgia;
-  font-style: oblique;
 	background-color: red;
 	
 }
