--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
     width: 10px;
     border: 10px solid black;
 }
