--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     top: 0;
     right: 0;
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     width: 300px;
     
 }
