Added files via upload

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,6 @@ body {
 .para_border {
 	border-style: solid;
 	border-color: green;
-	font-family: "Times New Roman";
+	font-family: Helvetica;
 
 }
